--- a/Pages/Home-Page.html
+++ b/Pages/Home-Page.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumea Health</title>
+    <link rel="stylesheet" href="/CSS/Navbar.css">
     <link rel="stylesheet" href="/CSS/Home-Page.css">
     <script src="/JS/Home-Page.js"></script>
 </head>
@@ -15,12 +16,12 @@
     <nav class="navbar">
         <div class="logo">Lumea Health</div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="/Pages/Home-Page.html">Home</a></li>
             <li><a href="/Pages/Booking-Appointment-Page.html">Book Appointment</a></li>
             <li><a href="#">Signup / Login</a></li>
         </ul>
     </nav>
-
+<img class='Stethoscope' src="/Images/Stethoscope.png">
 
 </body>
 
