Section 1 & Section 2 initial design in home page

--- a/Pages/Booking-Appointment-Page.html
+++ b/Pages/Booking-Appointment-Page.html
@@ -10,7 +10,7 @@
     <body>
          <!-- Navbar -->
     <nav class="navbar">
-        <div class="logo">Lumea Health</div>
+        <div class="logo">VeroCare</div>
         <ul class="nav-links">
             <li><a href="/Pages/Home-Page.html">Home</a></li>
             <li><a href="/Pages/Booking-Appointment-Page.html">Book Appointment</a></li>
