Section 2 : slider design

--- a/Pages/Home-Page.html
+++ b/Pages/Home-Page.html
@@ -39,7 +39,10 @@
                 <p>Your health is our priority. Book an appointment today and get expert medical care from trusted
                     professionals.</p>
 
-                <button>Book Appointment</button>
+                    <a href="/Pages/Booking-Appointment-Page.html">
+                        <button>Book Appointment</button>
+                    </a>
+                    
             </div>
 
             <img class='Stethoscope' src="/Images/stethoscope.webp">
@@ -48,39 +51,52 @@
 
     <div class="Second-section">
         <h2 class="Headers">Latest News & Health Tips</h2>
-        <!-- <div class="carousel">
-            <div class="carousel-container" id="carouselContainer">
-                <div class="slide">
-                    <span>
-                        <h2>Heart Disease Prevention</h2>
-                        <p>A recent study highlights that following a Mediterranean diet—rich in fruits,
-                            vegetables,whole grains, and healthy fats—can significantly lower the risk of heart disease.
-                            Experts recommend reducing processed foods, staying active,<br> and managing stress to keep
-                            your heart healthy. </p>
-                        <img src="/Images/heart-disease.avif">
-                    </span>
-                </div>
-
-
-                <div class="slide">
-                    <h2>Health Tip #2</h2>
-                    <p>Exercise for at least 30 minutes a day.</p>
-                </div>
-
-                <div class="slide">
-                    <h2>Health Tip #3</h2>
-                    <p>Eat a balanced diet with fruits and vegetables.</p>
-                </div>
-            </div>
-        </div> -->
+        
         <div class="carousel-container">
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">1</div>
-                    <div class="swiper-slide">2</div>
-                    <div class="swiper-slide">3</div>
-                    <div class="swiper-slide">4</div>
-                    <div class="swiper-slide">5</div>
+                    <div class="swiper-slide">
+                    <div>
+                        <h2>❤️Heart Disease Prevention  </h2>
+                        <p>A Mediterranean diet can help prevent heart disease by emphasizing fruits, vegetables, whole grains, nuts, and healthy fats like olive oil</p>
+                    </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div>
+                            <h2>😓Manage Stress  </h2>
+                            <p>Managing stress is essential for overall well-being. Regular exercise, deep breathing, mindfulness, and adequate sleep can help reduce stress levels.</p>
+                        </div>
+                        </div>
+
+                    <div class="swiper-slide">
+                        <div>
+                            <h2>🧑‍⚕️Schedule Regular Checkups </h2>
+                            <p>Scheduling regular checkups is key to maintaining good health. Routine visits allow doctors to detect potential issues early, monitor existing conditions, and provide necessary screenings. </p>
+                        </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div>
+                                <h2>😷Flu Season Warning </h2>
+                                <p>During flu season, it's important to take precautions to stay healthy. Get vaccinated, wash your hands frequently, and avoid close contact with sick individuals. </p>
+                            </div>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <div>
+                                    <h2>🚶‍♂️Walking Enhances Weight Loss</h2>
+                                    <p>A recent study highlights that regular walking not only burns calories but also preserves lean muscle, reduces belly fat, and improves mood, making it an effective and accessible exercise for weight management. 
+                                    </p>
+                                </div>
+                                </div>      
+                                <div class="swiper-slide">
+                                    <div>
+                                        <h2>🧘‍♂️Stretch Daily</h2>
+                                        <p>Stretching daily improves flexibility, reduces muscle stiffness, and enhances blood circulation. It helps prevent injuries, relieves stress, and promotes better posture </p>
+                                    </div>
+                                    </div>     
+
                 </div>
             </div>
         </div>
