Finished the third section & edited in the navbar

--- a/Pages/Booking-Appointment-Page.html
+++ b/Pages/Booking-Appointment-Page.html
@@ -13,7 +13,7 @@
         <div class="logo">VeroCare</div>
         <ul class="nav-links">
             <li><a href="/Pages/Home-Page.html">Home</a></li>
-            <li><a href="#">Signup / Login</a></li>
+            <li><a href="#">Login</a></li>
         </ul>
     </nav>
     </body>
