--- a/Pages/Home-Page.html
+++ b/Pages/Home-Page.html
@@ -30,7 +30,7 @@
         <ul class="nav-links">
             <li><a href="/Pages/Home-Page.html">Home</a></li>
             <!-- <li><a href="/Pages/Booking-Appointment-Page.html">Book Appointment</a></li> -->
-            <li><a href="#">Signup / Login</a></li>
+            <li><a href="#">Login</a></li>
         </ul>
     </nav>
 
@@ -108,7 +108,7 @@
 
     <div class="Third-section">
 
-        <h2 class="Headers">Why Choose Us?</h2>
+        <h2 class="Headers">Why To Choose Us?</h2>
         <div class="why-choose-us">
             <div class="choose-container">
 
@@ -152,6 +152,10 @@
 
         </div>
     </div>
+
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
