--- a/Pages/Home-Page.html
+++ b/Pages/Home-Page.html
@@ -154,7 +154,46 @@
     </div>
 
     <footer>
-        
+        <div class="footer-container">
+
+
+            <div class="main-text-section">
+                <h1 class="main-text">
+                </h1>
+
+            </div>
+
+            <div class="footer-sections">
+                <div class="about-us">
+                    <h4>About Us</h4>
+                    <p>At VeroCare Hospital, we are committed to <br>providing world-class 
+                        healthcare with compassion <br> and excellence.Our team of dedicated 
+                        professionals uses <br> cutting-edge technology and personalized<br> treatment
+                        plans to ensure the best care for our patients.  </p>
+                </div>
+
+                <div class="navigation">
+                    <h4>Navigation</h4>
+                    <ul>
+                        <li class="nav"><a href="/Pages/Home-Page.html">Home</a></li>
+                        <li class="nav"><a href="/Pages/Booking-Appointment-Page.html">Book Appointment</a></li>
+
+                    </ul>
+                </div>
+                <span>
+                    <h4>Social Media</h4>
+                    <ul class="socials">
+                        <li><a
+                                href="https://accounts.google.com/v3/signin/identifier?elo=1&ifkv=AcMMx-feKYaT0FszQKn3DJ8ymV-9wmjlXgJFF5fYlczJUJhk7ZI3YEiop__7VgL1H0SNOPL1n1mO&ddm=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin&continue=https%3A%2F%2Faccounts.google.com%2FManageAccount%3Fnc%3D1">
+                                <i class="icons fa-solid fa-envelope fa-xl"></i></a></li>
+                        <li><a href="https://www.facebook.com/"><i class="icons fa-brands fa-facebook fa-xl"></i></a>
+                        </li>
+                        <li><a href="https://www.instagram.com/accounts/login/?hl=en"><i
+                                    class="icons fa-brands fa-instagram fa-xl"></i></a></li>
+                    </ul>
+                </span>
+            </div>
+        </div>
     </footer>
 </body>
 
