linking login with the navbar

--- a/Pages/Home-Page.html
+++ b/Pages/Home-Page.html
@@ -30,7 +30,7 @@
         <ul class="nav-links">
             <li><a href="/Pages/Home-Page.html">Home</a></li>
             <!-- <li><a href="/Pages/Booking-Appointment-Page.html">Book Appointment</a></li> -->
-            <li><a href="#">Login</a></li>
+            <li><a href="/Pages/login.html">Login</a></li>
         </ul>
     </nav>
 
