--- a/Pages/Home-Page.html
+++ b/Pages/Home-Page.html
@@ -46,7 +46,7 @@
                 <li><a href="/Pages/About-Us.html">About Us</a></li>
             </ul>
             <div class="auth-buttons">
-                <button class="btn btn-outline">Sign In</button>
+               <button class="btn btn-outline" onclick="window.location.href='/Pages/login.html'">Sign In</button>
             </div>
         </nav>
     </div>
