--- a/Pages/login.html
+++ b/Pages/login.html
@@ -1,68 +1,44 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | Signup</title>
-    <link rel="stylesheet" href="/CSS/login.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VeroCare - Login/Signup</title>
+  <link rel="stylesheet" href="/CSS/login.css" />
 </head>
 <body>
+  <header class="header">
+    <div class="logo"> <span class="icon">⚕</span> VeroCare </div>
+    <nav class="nav">
+      <a href="#">Home</a>
+      <a href="#">Appointments</a>
+      <a href="#">About Us</a>
+    </nav>
+    <button class="btn" id="toggleForm">Sign In</button>
+  </header>
 
-    <div class="container" id="container">
-        <!-- Sign Up Form -->
-        <div class="form-container sign-up-container">
-            <form>
-                <h2>Create Account</h2>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-google"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-                <p>or use your email for registration</p>
-                <input type="text" placeholder="Full Name" required>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit">Sign Up</button>
-            </form>
-        </div>
+  <main class="main">
+    <section class="welcome">
+      <h1>Welcome to VeroCare</h1>
+      <p>Your health is our priority. Book an appointment today and get expert medical care from trusted professionals.</p>
+      <button class="btn">Book Appointment</button>
+    </section>
 
-        <!-- Sign In Form -->
-        <div class="form-container sign-in-container">
-            <form>
-                <h2>Sign in</h2>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-google"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-                <p>or use your account</p>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <a href="#">Forgot your password?</a>
-                <button type="submit">Sign In</button>
-            </form>
-        </div>
+    <section class="form-section">
+      <form id="authForm">
+        <h2 id="formTitle">Sign In</h2>
+        <input type="email" id="email" placeholder="Email" required />
+        <input type="password" id="password" placeholder="Password" required />
+        <button type="submit" class="btn">Submit</button>
+        <p id="errorMsg"></p>
+      </form>
+    </section>
+  </main>
 
-        <!-- Overlay Section -->
-        <div class="overlay-container">
-            <div class="overlay">
-                <div class="overlay-panel overlay-left">
-                    <h2>Welcome Back!</h2>
-                    <p>To keep connected with us, please login with your personal details</p>
-                    <button class="ghost" id="signIn">Sign In</button>
-                </div>
-                <div class="overlay-panel overlay-right">
-                    <h2>Hello, Friend!</h2>
-                    <p>Enter your personal details and start your journey with us</p>
-                    <button class="ghost" id="signUp">Sign Up</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="/JS/login.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> 
+  <script src="/JS/login.js"></script>
 </body>
 </html>
+
 
 
