--- a/Pages/Doctor-Dashboard.html
+++ b/Pages/Doctor-Dashboard.html
@@ -14,8 +14,8 @@
 
 
     <title>VeroCare</title>
-    <link rel="stylesheet" href="../CSS/Navbar.css">
-    <link rel="stylesheet" href="../CSS/Home-Page.css">
+    <link rel="stylesheet" href="/CSS/Navbar.css">
+    <link rel="stylesheet" href="/CSS/Home-Page.css">
     <link rel="stylesheet" href="../CSS/Doctor-Dashboard.css">
     <script src="../JS/Home-Page.js"></script>
     <script src="../JS/Navbar.js"></script>
@@ -31,7 +31,7 @@
 <nav class="navbar">
     <div class="logo">VeroCare </div>
     <ul class="nav-links">
-        <li><a href="../Pages/Home-Page.html">Home</a></li>
+        <li><a href="/Pages/Home-Page.html">Home</a></li>
         <!-- <li><a href="/Pages/Booking-Appointment-Page.html">Book Appointment</a></li> -->
         <li><a href="#">Login</a></li>
     </ul>
