--- a/Pages/Doctor-Dashboard.html
+++ b/Pages/Doctor-Dashboard.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../CSS/Navbar.css">
+    <script src="/JS/Booking-Appointment.js"></script>
+    <script src="../JS/Navbar.js"></script>
 
 <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
@@ -12,14 +15,39 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
 
-
-    <title>VeroCare</title>
-    <link rel="stylesheet" href="CSS/Navbar.css">
-    <link rel="stylesheet" href="CSS/Home-Page.css">
+<body>
     
-    <script src="JS/Home-Page.js"></script>
-    <script src="JS/Navbar.js"></script>
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <span class="logo-icon">⚕️</span>
+                    VeroCare
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/Pages/Home-Page.html  ">Home</a></li>
+                    <li><a href="/Pages/Booking-Appointment-Page.html" class="active">Appointments</a></li>
+
+                    <li><a href="#">About Us</a></li>
+                </ul>
+                <div class="auth-buttons">
+                    <button class="btn btn-outline" onclick="window.location.href='/Pages/login.html'">Sign In</button>
+
+                </div>
+            </nav>
+        </div>
+    </header>
+
     <style>
+
+ header {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+
+
+
     body {
     margin: 0;
     padding: 0;
@@ -83,13 +111,13 @@
     padding: 30px;
     border-radius: 10px;
     flex: 1 1 0;
-    min-width: 900px;
-    max-width: 1040px;
-    height: 150px;
+    min-width: 890px;
+    max-width: 1020px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    margin-top: 0;
 }
 
 
@@ -111,7 +139,7 @@
 
 .welcome-banner p {
     font-size: 16px;
-    margin-top: 5px;
+    margin-top: 2px;
 }
 
 
@@ -124,7 +152,7 @@
     color: rgb(0, 0, 0);
     border-radius: 10px;
     padding: 20px;
-    width: 230px;
+    width: 240px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -375,21 +403,13 @@
     font-size: 14px;
 }
     </style>
-</head>
-
-<body>
 
 
 
-    <!-- Navbar -->
-    <nav class="navbar">
-        <div class="logo">VeroCare </div>
-        <ul class="nav-links">
-            <li><a href="Home-Page.html">Home</a></li>
-            <!-- <li><a href="/Pages/Booking-Appointment-Page.html">Book Appointment</a></li> -->
-            <li><a href="#">Signup / Login</a></li>
-        </ul>
-    </nav>
+
+
+
+  
 
 
 <div class="dashboard-layout">
