--- a/Pages/Home-Page.html
+++ b/Pages/Home-Page.html
@@ -47,6 +47,9 @@
             </ul>
             <div class="auth-buttons">
                <button class="btn btn-outline" onclick="window.location.href='/Pages/login.html'">Sign In</button>
+                <a href="/Pages/patientDashboard.html" class="profile-icon" title="Profile">
+                <i class="fas fa-user-circle"></i>
+              </a>
             </div>
         </nav>
     </div>
