--- a/Pages/Doctor-Appointments.html
+++ b/Pages/Doctor-Appointments.html
@@ -115,9 +115,9 @@
         <td>001</td>
         <td>Deena Cooley</td>
         <td>65</td>
-        <td>Vicki Walsh</td>
-        <td>Surgeon</td>
-        <td>2024-05-23</td>
+        <td>Alex White</td>
+        <td>Cardiology</td>
+        <td>2025-06-2</td>
         <td>9:30 AM</td>
         <td>Diabetes</td>
         <td class="action-buttons">
@@ -130,11 +130,56 @@
         <td>002</td>
         <td>Jerry Wilcox</td>
         <td>73</td>
-        <td>April Gallegos</td>
-        <td>Gynecologist</td>
-        <td>2024-05-23</td>
-        <td>9:45 AM</td>
+        <td> Alex White</td>
+        <td>Cardiology</td>
+        <td>2025-05-28</td>
+        <td>9:50 AM</td>
         <td>Fever</td>
+        <td class="action-buttons">
+          <button class="btn-accept"><i class="fas fa-check"></i></button>
+          <button class="btn-reject"><i class="fas fa-times"></i></button>
+          <button class="btn-edit"><i class="fas fa-pen"></i></button>
+        </td>
+      </tr>
+      <tr>
+        <td>003</td>
+        <td>Malak Wael</td>
+        <td>33</td>
+        <td>Alex White</td>
+        <td>Cardiology</td>
+        <td>2025-05-29</td>
+        <td>11:30 AM</td>
+        <td>Diabetes</td>
+        <td class="action-buttons">
+          <button class="btn-accept"><i class="fas fa-check"></i></button>
+          <button class="btn-reject"><i class="fas fa-times"></i></button>
+          <button class="btn-edit"><i class="fas fa-pen"></i></button>
+        </td>
+      </tr>
+      <tr>
+        <td>004</td>
+        <td>Jomana Ayman</td>
+        <td>45</td>
+        <td>Alex White</td>
+        <td>Cardiology</td>
+        <td>2025-06-9</td>
+        <td>1:30 AM</td>
+        <td>Diabetes</td>
+        <td class="action-buttons">
+          <button class="btn-accept"><i class="fas fa-check"></i></button>
+          <button class="btn-reject"><i class="fas fa-times"></i></button>
+          <button class="btn-edit"><i class="fas fa-pen"></i></button>
+        </td>
+      </tr>
+      <tr>
+        <td>005</td>
+        <td>Jana Yasser</td>
+        <td>30</td>
+        <td>Alex White</td>
+        <td>Cardiology</td>
+        <td>2025-06-7</td>
+        <td>9:30 AM</td>
+        <td>Diabetes</td>
         <td class="action-buttons">
           <button class="btn-accept"><i class="fas fa-check"></i></button>
           <button class="btn-reject"><i class="fas fa-times"></i></button>
