--- a/Pages/Doctor-Dashboard.html
+++ b/Pages/Doctor-Dashboard.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/Navbar.css">
-    <script src="/JS/Booking-Appointment.js"></script>
+      <link rel="stylesheet" href="../CSS/Navbar.css">
+    <link rel="stylesheet" href="../CSS/Home-Page.css">
+    <script src="../JS/Home-Page.js"></script>
     <script src="../JS/Navbar.js"></script>
 
 <!-- Swiper CSS -->
