--- a/Pages/admin-dashboard.html
+++ b/Pages/admin-dashboard.html
@@ -11,9 +11,9 @@
   <header class="header">
     <div class="logo"><span class="icon">⚕</span> VeroCare Admin</div>
     <nav class="nav">
-      <a href="#dashboard">Dashboard</a>
-      <a href="#users">Users</a>
-      <a href="#appointments">Appointments</a>
+      <a href="/Pages/Doctor-Dashboard.html">Dashboard</a>
+      <a href="/Pages/patientDashboard.html">Users</a>
+      <a href="/Pages/Booking-Appointment-Page.html">Appointments</a>
       <a href="#settings">Settings</a>
     </nav>
     <button class="btn">Logout</button>
