--- a/Pages/login.html
+++ b/Pages/login.html
@@ -11,9 +11,9 @@
   <header class="header">
     <div class="logo"> <span class="icon">⚕</span> VeroCare </div>
     <nav class="nav">
-      <a href="#">Home</a>
-      <a href="#">Appointments</a>
-      <a href="#">About Us</a>
+      <a href="/Pages/Home-Page.html">Home</a>
+      <a href="/Pages/Booking-Appointment-Page.html">Appointments</a>
+      
     </nav>
     <button class="btn" id="toggleForm">Sign In</button>
   </header>
