--- a/Pages/admin-dashboard.html
+++ b/Pages/admin-dashboard.html
@@ -16,7 +16,7 @@
       <a href="/Pages/Booking-Appointment-Page.html">Appointments</a>
       <a href="#settings">Settings</a>
     </nav>
-    <button class="btn">Logout</button>
+   <button id="logoutBtn" class="btn">Logout</button>
   </header>
 
   <main class="dashboard">
