--- a/Pages/Doctor-Appointments.html
+++ b/Pages/Doctor-Appointments.html
@@ -62,7 +62,7 @@
       background-color: #f1f1f1;
     }
 
-    .action-buttons button {
+    .act-buttons button {
       border: none;
       padding: 6px 10px;
       margin-right: 5px;
@@ -71,23 +71,23 @@
       color: white;
     }
 
-    .btn-accept {
+    .button-accept {
       background-color: #28a745;
     }
 
-    .btn-reject {
+    .button-reject {
       background-color: #dc3545;
     }
 
-    .btn-edit {
+    .button-edit {
       background-color: #17a2b8;
     }
 
-    .btn-accept.accepted {
+    .button-accept.accepted {
       background-color: #218838;
     }
 
-    .btn-reject.rejected {
+    .button-reject.rejected {
       background-color: #c82333;
     }
   </style>
@@ -120,10 +120,10 @@
         <td>2025-06-2</td>
         <td>9:30 AM</td>
         <td>Diabetes</td>
-        <td class="action-buttons">
-          <button class="btn-accept"><i class="fas fa-check"></i></button>
-          <button class="btn-reject"><i class="fas fa-times"></i></button>
-          <button class="btn-edit"><i class="fas fa-pen"></i></button>
+        <td class="act-buttons">
+          <button class="button-accept"><i class="fas fa-check"></i></button>
+          <button class="button-reject"><i class="fas fa-times"></i></button>
+          <button class="button-edit"><i class="fas fa-pen"></i></button>
         </td>
       </tr>
       <tr>
